[package]
name = "effitask"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
homepage = "https://github.com/sanpii/effitask"
edition = "2021"
rust-version = "1.80"

[dependencies]
dotenvy = "0.15"
gtk = "0.16"
human-panic = "2.0"
notify = "7.0"
pulldown-cmark = "0.12"
rand = "^0.8"
regex = "^1.0"
relm = "0.24"
relm-derive = "0.24"
xdg = "2.1"

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.log]
version = "^0.4"
features = ["std"]

[dependencies.todo-txt]
version = "3.1"
features = ["extended"]
