[package]
name = "effitask"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
homepage = "https://github.com/sanpii/effitask"
edition = "2021"
rust-version = "1.80"

[dependencies]
dotenvy = "0.15"
human-panic = "2.0"
notify = "7.0"
pulldown-cmark = "0.12"
rand = "0.8"
regex = "1.0"
relm4 = { git = "https://github.com/Relm4/Relm4.git", rev = "e24915ac03e5ef1ec6f489ac7aeb26ec009f1618" }
relm4-components = "0.9"
xdg = "2.1"

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_12"]

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.todo-txt]
version = "4.0"
features = ["extended"]
